--- a/CarAccountingGibdd/CarAccountingGibdd/Windows/NavWindowInspector.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Windows/NavWindowInspector.xaml
@@ -76,7 +76,7 @@
                              Checked="OwnerPageRB_Checked"/>
 
                 <RadioButton Style="{StaticResource RadioButton.Navigation}"
-                             Content="Автомобили"
+                             Content="Транспорты"
                              Tag="carOutline"
                              GroupName="navItems"
                              Margin="0 0 0 20"
@@ -89,25 +89,19 @@
                            Margin="0 0 0 10"/>
 
                 <RadioButton Style="{StaticResource RadioButton.Navigation}"
-                             Content="Списки нарушений"
+                             Content="Отчеты нарушений"
                              Tag="InvoiceTextRemoveOutline"
                              GroupName="navItems"
                              Margin="0 0 0 5"
                              Checked="ViolationInspectionPageRB_Checked"/>
-                
+
                 <RadioButton Style="{StaticResource RadioButton.Navigation}"
                              Content="Свидетельства"
                              Tag="CardAccountDetailsOutline"
                              GroupName="navItems"
-                             Margin="0 0 0 5"
+                             Margin="0 0 0 10"
                              Checked="CertificatePageRB_Checked"/>
-                
-                <Button Style="{StaticResource Button.Navigator}"
-                        Content="Создать отчет"
-                        Tag="chartLine"
-                        Margin="0 0 0 10"
-                        Click="ReportButton_Click"/>
-                
+
                 <Separator Background="#ffffff"
                            Margin="0 0 0 10"/>
 
