--- a/CarAccountingGibdd/CarAccountingGibdd/Pages/PagesOperator/OwnerPageOperator.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Pages/PagesOperator/OwnerPageOperator.xaml
@@ -84,41 +84,20 @@
         <Grid>
             <DataGrid Name="itemsDG">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="ФИО" Binding="{Binding Fullname, Mode=OneWay}">
-                        <DataGridTextColumn.ElementStyle>
-                            <Style TargetType="TextBlock">
-                                <Setter Property="TextWrapping" Value="Wrap"/>
-                                <Setter Property="MaxWidth" Value="200"/>
-                            </Style>
-                        </DataGridTextColumn.ElementStyle>
-                    </DataGridTextColumn>
-                    <DataGridTextColumn Header="Дата рождения" Binding="{Binding Birthdate, StringFormat=dd.MM.yyyy}"/>
-                    <DataGridTextColumn Header="Эл. почта" Binding="{Binding EmailValue, Mode=OneWay}">
-                        <DataGridTextColumn.ElementStyle>
-                            <Style TargetType="TextBlock">
-                                <Setter Property="TextWrapping" Value="Wrap"/>
-                                <Setter Property="MaxWidth" Value="130"/>
-                            </Style>
-                        </DataGridTextColumn.ElementStyle>
-                    </DataGridTextColumn>
-                    <DataGridTextColumn Header="Телефон" Binding="{Binding Phone}"/>
-                    <DataGridTextColumn Header="Паспорт" Binding="{Binding Passport}"/>
-                    <DataGridTextColumn Header="Адрес" Binding="{Binding Address}">
-                        <DataGridTextColumn.ElementStyle>
-                            <Style TargetType="TextBlock">
-                                <Setter Property="TextWrapping" Value="Wrap"/>
-                                <Setter Property="MaxWidth" Value="130"/>
-                            </Style>
-                        </DataGridTextColumn.ElementStyle>
-                    </DataGridTextColumn>
-                    <DataGridTemplateColumn CellTemplate="{StaticResource Button.DataGrid}"/>
+                    <DataGridTextColumn ElementStyle="{StaticResource WrapStyle}" Width="1.5*" Header="ФИО" Binding="{Binding Fullname, Mode=OneWay}"/>
+                    <DataGridTextColumn ElementStyle="{StaticResource WrapStyle}" Width="*" Header="Дата рождения" Binding="{Binding Birthdate, StringFormat=dd.MM.yyyy}"/>
+                    <DataGridTextColumn ElementStyle="{StaticResource WrapStyle}" Width="2*" Header="Эл. почта" Binding="{Binding EmailValue, Mode=OneWay}"/>
+                    <DataGridTextColumn ElementStyle="{StaticResource WrapStyle}" Width="*" Header="Телефон" Binding="{Binding Phone}"/>
+                    <DataGridTextColumn ElementStyle="{StaticResource WrapStyle}" Width="*" Header="Паспорт" Binding="{Binding Passport}"/>
+                    <DataGridTextColumn ElementStyle="{StaticResource WrapStyle}" Width="2*" Header="Адрес" Binding="{Binding Address}"/>
+                    <DataGridTemplateColumn Width="120" CellTemplate="{StaticResource Button.DataGrid}"/>
                 </DataGrid.Columns>
             </DataGrid>
 
             <TextBlock Text="Данные о владельцах отсутствуют"
                        Style="{StaticResource TextBlock.H6}"
                        FontSize="18"
-                       Margin="20 80 0 0"
+                       Margin="20 90 0 0"
                        Visibility="{Binding Items.Count, ElementName=itemsDG, 
                        Converter={x:Static converters:IntToVisibilityConverter.Instance } }"/>
 
