--- a/CarAccountingGibdd/CarAccountingGibdd/Styles/StylesBased.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Styles/StylesBased.xaml
@@ -1792,6 +1792,8 @@
         <Setter Property="CanUserSortColumns" Value="False"/>
         <Setter Property="IsReadOnly" Value="True"/>
         <Setter Property="Focusable" Value="False"/>
+        <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+        <Setter Property="HorizontalScrollBarVisibility" Value="Hidden"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type DataGrid}">
@@ -1963,9 +1965,11 @@
     <Style TargetType="{x:Type DataGridCell}">
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
-        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Foreground" Value="{StaticResource Text.Secondary.Brush}"/>
-        <Setter Property="Margin" Value="10 4 10 4"/>
+        <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="Margin" Value="10 4"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type DataGridCell}">
@@ -1974,7 +1978,7 @@
                             BorderThickness="{TemplateBinding BorderThickness}" 
                             Margin="{TemplateBinding Margin}">
                         <ContentPresenter VerticalAlignment="Center"
-                                          HorizontalAlignment="Left"/>
+                                          HorizontalAlignment="Stretch"/>
                     </Border>
 
                     <ControlTemplate.Triggers>
@@ -1989,6 +1993,11 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+    </Style>
+
+    <!-- Для свапа текста в колонках -->
+    <Style x:Key="WrapStyle" TargetType="TextBlock">
+        <Setter Property="TextWrapping" Value="Wrap"/>
     </Style>
     <!--#endregion-->
 </ResourceDictionary>
